auth-service refactored